fix spacing on home search

--- a/client/src/sections/Home.scss
+++ b/client/src/sections/Home.scss
@@ -62,8 +62,6 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  margin-left: auto;
-  margin-right: auto;
   border-radius: 5px;
 }
 
@@ -74,6 +72,10 @@
   column-gap: 10px;
   padding: 5px;
   margin-bottom: 10px;
+}
+.service-result :nth-child(2) {
+  flex: 1;
+  text-align: right;
 }
 
 @media (max-width: 768px) {
